fix text overflow

--- a/client/src/components/Contacts/ContactProfile.css
+++ b/client/src/components/Contacts/ContactProfile.css
@@ -157,6 +157,8 @@
   justify-content: center;
   margin-bottom: 10%;
   padding-bottom: 20%;
+  display: flex;
+  flex-direction: column;
 }
 
 .curr-contacts {
@@ -172,15 +174,47 @@
   padding-bottom: 0%;
   border: var(--secondary-blue);
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
 }
 
-.curr-contacts-container {
+.currr-contacts {
+  border-radius: 5px;
+  border-width: 0.5px;
+  color: var(--primary-black);
+  margin-top: 3%;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 0%;
+  padding-bottom: 5%;
+  border: var(--secondary-blue);
+  border-radius: 5px;
+  padding-right: 7%;
+  padding-left: 7%;
+}
+
+.currr-contacts-container {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 45% 55%;
   padding-left: 0%;
   transition: 0.2 ease;
   padding-top: 0%;
   padding-bottom: 0%;
+  overflow-wrap: break-word;
+  text-align: left;
+}
+
+.curr-contacts-container {
+  display: flex;
+  flex-direction: column;
+  padding-left: 2.2%;
+  transition: 0.2 ease;
+  padding-top: 0%;
+  padding-bottom: 0.5%;
+  margin-left: 2%;
+  margin-right: 1%;
+  padding-right: 1%;
+  overflow-wrap: break-word;
 }
 
 .curr-contacts h2 {
@@ -204,7 +238,7 @@
   letter-spacing: 1px;
   align-items: left;
   margin-top: 0%;
-  margin-bottom: 8%;
+  padding-bottom: 0%;
 }
 
 .curr-contacts h1 {
@@ -216,6 +250,47 @@
   margin-bottom: 3%;
   margin-top: 0;
   text-decoration: underline;
+}
+
+.currr-contacts h2 {
+  font-family: var(--button-font);
+  font-weight: bolder;
+  color: var(--primary-blue);
+  font-size: 2vh;
+  letter-spacing: 1px;
+  align-items: left;
+  margin-top: 0%;
+  margin-bottom: 3%;
+  text-align: left;
+  text-align: left;
+}
+
+.currr-contacts h3 {
+  font-family: var(--button-font);
+  font-weight: bolder;
+  color: var(--secondary-blue);
+  font-size: 2vh;
+  letter-spacing: 1px;
+  align-items: left;
+  margin-top: 0%;
+  margin-bottom: 0%;
+}
+
+.currr-contacts-container h3 {
+  overflow-wrap: break-word;
+  margin-right: 1%;
+}
+
+.currr-contacts h1 {
+  font-family: var(--button-font);
+  font-weight: bolder;
+  color: var(--secondary-blue);
+  font-size: 2.2vh;
+  letter-spacing: 1px;
+  margin-bottom: 2%;
+  margin-top: 0%;
+  text-decoration: underline;
+  padding-top: 0%;
 }
 
 .contactdetails {
@@ -414,6 +489,13 @@
   font-size: 100%;
   left: 10%;
 }
+.modalbodyy label {
+  font-family: var(--button-font);
+  color: var(--secondary-blue);
+  letter-spacing: 2.5px;
+  font-size: 100%;
+  left: 10%;
+}
 
 .modal-title hr {
   width: 100%;
@@ -490,6 +572,25 @@
 }
 
 .modal-bodyy input {
+  background-color: var(--primary-white);
+  margin-top: 0%;
+  width: 5%;
+  margin-left: 3%;
+  margin-bottom: 1.5%;
+}
+
+.modalbodyy {
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
+}
+
+.modalbodyy input {
   background-color: var(--primary-white);
   margin-top: 0%;
   width: 5%;
